--- a/style.css
+++ b/style.css
@@ -2,8 +2,19 @@
 
 body {
     font-family: Karla;
-    padding: 32px 50px 0 350px;
+    
 
+}
+main {
+    width: 100%;
+    padding: 114px 50px 50px 350px;
+}
+main#map {
+    padding: 104px 40px 40px 340px; 
+    height: 100vh;
+}
+footer {
+    padding-left: 300px;
 }
 
 .centered {
@@ -20,7 +31,61 @@ ul#sidenav-1 *{
     color: white;
 }
 
-#mapid { height: 50vh; }
+#mapid { 
+    height: 100%; z-index: 0; background-color: black;
+    margin: 0;
+}
 
 nav {
+    position: fixed;
+    z-index: 10;
+    top: 0; left: 0;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    padding: 10px;
+
+  }
+
+  .flex {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .row .col {
+      padding: 10px;
+  }
+  .col {
+    box-sizing: border-box;
+  }
+ th {
+      border-radius: 0;
+  }
+
+#sidenav-1 {
+    padding-top: 32px;
+    top: 64px;
+
+}
+
+@media only screen and (max-width: 992px) {
+    main {
+        padding: 64px 50px;
+    }
+    main#map {
+        padding: 84px 40px 20px 40px;
+    }
+    tr {
+        border-bottom: 0 solid !important; 
+    }
+    #sidenav-1 {
+        top: 0;
+    }
+    footer {
+        padding: 0;
+    }
 }
