--- a/style.css
+++ b/style.css
@@ -89,3 +89,15 @@ nav {
         padding: 0;
     }
 }
+
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
+      
